# AiStoryBuilder

./: .cursorrules  .env.development  .gitattributes  .githubignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESKTOP_GUIDE.md  DEVELOPER.md  DEV_GUIDE.md  FAQ.md  FEATURES.md  GITHUB_SETUP.md  LICENSE  LOCAL_SETUP.md  MIGRATION_PLAN.md  QUICKSTART.md  README.md  RELEASE_NOTE_DRAFT.md  RUST_INSTALL_GUIDE.md  SECURITY.md  TAURI_SETUP.md  TUTORIAL.md  UI_IMPROVEMENT_PLAN.md  UI_UX_IMPROVEMENTS.md  USER_GUIDE.md  deployment-config.json  env.local.example  eslint.config.js  index.html  lint_output.txt  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts  (+8 more)
.claude/: settings.local.json
.github/workflows/: android-build.yml  deploy.yml  release-android.yml
docs/: API.md  README.md
public/: manifest.json  sw.js
scripts/: android-build-windows.js  build-windows.js  check-local-llm.cjs  check-local-llm.js  create-android-keystore.js  deploy.ps1  deploy.sh  install-with-exclusion.ps1  optimize-repo.js  quick-start.js  setup-deployment.js  setup-local.js  setup-windows.js  test-tauri-proxy.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AISettings.tsx  AccessibilityTest.tsx  AccessibleComponents.tsx  AudioImageToStoryModal.tsx  AudioToStoryModal.tsx  ContextHelp.tsx  DataManager.tsx  ExitConfirmDialog.tsx  Header.tsx  HomePage.tsx  ImageBoard.tsx  ImageToStoryModal.tsx  LazyComponent.tsx  LazyComponents.tsx  MobileMenu.tsx  NewProjectModal.tsx  OfflineNotifier.tsx  Onboarding.tsx  OptimizedImage.tsx  ProjectSettingsModal.tsx  RecapGate.tsx  RecapModal.tsx  RecoveryDialog.tsx  SearchBar.tsx  SearchReplaceModal.tsx  ShortcutHelpModal.tsx  Sidebar.tsx  SnapshotCompareModal.tsx  StoryProposalModal.tsx  Toast.tsx  ToolsSidebar.tsx  Tooltip.tsx  VirtualScrollList.tsx  WritingDashboardModal.tsx  onboardingData.tsx
src/constants/: character.ts  draft.ts  features.ts  writingStyle.ts
src/contexts/: AIContext.tsx  BackButtonContext.tsx  GenerationContext.tsx  PendingResultContext.tsx  ProjectContext.tsx
src/data/: sampleProject.ts
src/hooks/: useAIProviderFallback.ts  useAbortableRequest.ts  useAndroidBackButton.ts  useErrorHandler.ts  useKeyboardNavigation.ts  useMediaQuery.ts  useMemoryLeakPrevention.ts  useMemoryMonitor.ts  useNetworkStatus.ts  usePerformanceMonitor.ts  useSwipeGesture.ts
src/services/: aiCostService.ts  aiService.ts  autoBackupService.ts  chapterHistoryService.ts  crashRecoveryService.ts  databaseService.ts  emotionAnalysisService.ts  epubService.ts  httpService.ts  storageService.ts  writingStatsService.ts
src/tests/: setup.ts
src/types/: ai.ts  characterPossession.ts  common.ts  consistency.ts  creativePoint.ts  draft.ts  emotion.ts  errors.ts  evaluation.ts  index.ts  markdown-it.d.ts  preemptive.ts  recap.ts  skeleton.ts  tauri.ts  whatIf.ts
src/utils/: aiPricingUtils.ts  aiResponseParser.ts  apiUtils.ts  avatarColor.ts  chapterUtils.ts  charCount.ts  (+22 more)
(+267 files in other folders)
