[package]
name = "ai-story-builder"
version = "1.0.0"
description = "AIを活用した小説創作支援アプリケーション"
authors = ["AI Story Builder Team"]
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/your-username/ai-story-builder"
homepage = "https://github.com/your-username/ai-story-builder"
documentation = "https://github.com/your-username/ai-story-builder#readme"
keywords = ["ai", "story", "writing", "novel", "creative"]
categories = ["multimedia::graphics", "office"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Tauri dependencies
tauri = { version = "2.8.5", features = [] }

# Windows specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
