[package]
name = "ai-story-builder"
version = "2.0.0"
description = "AIを活用した小説創作支援アプリケーション"
authors = ["AI Story Builder Team"]
license = "MIT"
repository = "https://github.com/your-username/ai-story-builder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-http = "2.0"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
