[package]
name = "ai-story-builder"
version = "2.2.3"
description = "AIを活用した小説創作支援アプリケーション"
authors = ["AI Story Builder Team"]
license = "MIT"
repository = "https://github.com/your-username/ai-story-builder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_story_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-http = "2.5.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-store = "2.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
